# ticketless-api-rust

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  my.cnf
api/: Cargo.toml
api/src/: lib.rs
api/src/routes/: events.rs  users.rs
database/: Cargo.toml
database/src/: m20240830_132555_init_basic.rs  main.rs
entity/: Cargo.toml
entity/src/: advertisement.rs  event.rs  events.rs  lib.rs  mod.rs  organization.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20240830_132555_init_basic.rs
service/: Cargo.toml
service/src/: lib.rs
src/: main.rs
src/api/: mod.rs
src/api/routes/: events.rs
src/api/routes/events/: mod.rs  models.rs
src/api/routes/users/: mod.rs  models.rs
src/entity/: event.rs  ticket.rs
