[package]
name = "ticketless-api-rust"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["database"]

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
sea-orm = { version = "1.0.1", features = [ "sqlx-mysql", "runtime-tokio"] }
serde = "1.0.209"
serde_json = "1.0.127"
validator = { version = "0.18.1", features = ["derive"] }


